Fixed collapsed nav to not collide with page text

--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -16,7 +16,7 @@ body {
 
 .navbar.navbar-openstile {
   position: absolute;
-  z-index: 10;
+  z-index: 1000;
   width: 100%;
   margin: 0px;
   background-color: transparent;
@@ -340,7 +340,8 @@ footer {
     .navbar-collapse {
       border-top: 1px solid transparent;
       box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-      background-color: rgba(0,0,0,0.8);
+      background-color: rgba(0,0,0,0.9);
+      height: 100vh;
     }
     .navbar-fixed-top {
       top: 0;
